flux/apps/personal/plane-endpoint/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
    name: external-plane
    namespace: plane
subsets:
    - addresses:
          - ip: 10.67.1.108
      ports:
          - name: http
            port: 80
            protocol: TCP
          - name: mcphttp
            port: 8211
            protocol: TCP
