flux/apps/personal/plane-endpoint/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: external-plane
    namespace: plane
spec:
    ports:
        - name: http
          port: 80
          protocol: TCP
          targetPort: 80
        - name: mcphttp
          port: 8211
          protocol: TCP
          targetPort: 8211
