flux/apps/personal/plane-endpoint/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: external-plane
    namespace: plane
spec:
    parentRefs:
        - name: tls-gateway
          namespace: kube-system
    hostnames:
        - "plane.axiom.lucasfehres.nl"
    rules:
        - backendRefs:
              - name: external-plane
                port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: external-plane-mcp
    namespace: plane
spec:
    parentRefs:
        - name: internal-gateway
          namespace: kube-system
    hostnames:
        - "plane-mcp.internal.axiom.lucasfehres.nl"
    rules:
        - backendRefs:
              - name: external-plane
                port: 8211
